# ptbox

./: .gitignore  setup.cfg
.devcontainer/: devcontainer.json
apis/: train.py  train_folds.py
old/: README.md  prediction.py  run.sh  split_folds.py  train.py  validation.py
old/config/: base.py
old/datasets/: __init__.py  dataset_factory.py
old/losses/: __init__.py  class_balanced_loss.py  focal_loss.py  functions.py  loss_factory.py
old/models/: head.py  model_factory.py  pooling.py
old/notebooks/: EDA.ipynb  Untitled1.ipynb  check_metrics.ipynb  error_analysis.ipynb  image-preprocessing-128x128.ipynb
old/optimizers/: optimizer_factory.py
old/schedulers/: scheduler_factory.py
old/transforms/: augmix.py  gridmask.py  transform_factory.py
old/utils/: callbacks.py  functions.py  metrics.py  utils.py  visualize.py
projects/birdcall/configs/: 001_resnet18.yml
src/ptbox/: __init__.py  registry.py
src/ptbox/utils/: utils.py
