[metadata]
name = ptbox
description = minimum toolbox to configure your ml project by yaml

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
  numpy
  pandas
  omegaconf
  wandb
  catalyst
  albumentations
  #torch >= 1.6.0

[options.packages.find]
where=src